--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 html
   head
-    title="Facts Nobody Asked For"
+    title Facts Nobody Asked For
   body
-    h1 #{text}
+    h1 Fact ##{index}: #{text}
     h3 Fact from #[a(href=source) #{source}]
     h5 Made by #[a(href="https://github.com/leoriviera/facts-api") Leo.] I'll get around to polishing this up soon, I promise. Call the endpoint #[a(href='./random') /random] to get one of #{count} facts as a JSON response. Please use wisely.
