Make theme dark

--- a/views/index.pug
+++ b/views/index.pug
@@ -15,7 +15,7 @@ head
 
 body
   section.hero.is-fullheight
-    div.hero-body
+    div.hero-body.is-black
       div.container.has-text-centered
         div.column.is-6.is-offset-3
           h1.has-text-weight-light
