Fix background black colour

--- a/views/index.pug
+++ b/views/index.pug
@@ -14,8 +14,8 @@ head
   title Facts Nobody Asked For
 
 body
-  section.hero.is-fullheight
-    div.hero-body.is-black
+  section.hero.is-fullheight.is-black
+    div.hero-body
       div.container.has-text-centered
         div.column.is-6.is-offset-3
           h1.has-text-weight-light
