--- a/views/index.pug
+++ b/views/index.pug
@@ -11,7 +11,7 @@ head
   style
     include ./css/index.css
 
-  title Facts Nobody Asked For
+  title The Fact Space: Facts Nobody Asked For
 
 body
   section.hero.is-fullheight.is-black
