Add description metadata

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,7 @@ head
   meta(charset='utf-8')
   meta(http-equiv='X-UA-Compatible' content='IE=edge')
   meta(name='viewport' content='width=device-width, initial-scale=1')
+  meta(name='description' content='Enjoy a random fact on every refresh. By Leo.')
 
   link(rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@400;500;600&display=swap')
   link(rel='stylesheet' href='https://unpkg.com/bulma@0.9.0/css/bulma.min.css')
